<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.couponapp.login.LoginActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:text="@string/app_name"
        android:textColor="#78909C"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />


    <EditText
    android:id="@+id/editText_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/app_title"
    android:layout_margin="15dp"
        android:textColor="#00becc"
    android:ems="10"
    android:hint="@string/enter_email"
    android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_email"
        android:layout_margin="15dp"
        android:ems="10"
        android:visibility="gone"
        android:hint="@string/enter_email"
        android:textColor="#00becc"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_email"
        android:layout_margin="15dp"
        android:ems="10"
        android:textColor="#00becc"
        android:hint="@string/enter_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/editText_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_password"
        android:layout_margin="15dp"
        android:ems="10"
        android:textColor="#00becc"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:visibility="gone"/>


    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_confirm_password"
        android:layout_margin="15dp"
        android:background="#00becc"
        android:text="@string/sign_in"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_15dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_confirm_password"
        android:layout_margin="15dp"
        android:background="#00becc"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/sigh_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sign_in_btn"
        android:layout_toLeftOf="@+id/sigh_in_label"
        android:layout_marginLeft="@dimen/_35dp"
        android:text="@string/sign_up_label" />

    <TextView
        android:id="@+id/sigh_in_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@+id/sigh_in"
        android:layout_below="@+id/sign_in_btn"
        android:layout_marginEnd="65dp"
        android:text="@string/sign_up"
        android:textColor="#00becc" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/holo_blue_dark"
        android:visibility="gone"
        tools:visibility="visible"></ProgressBar>




    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="53dp"
        android:layout_marginLeft="@dimen/_15dp"
        android:layout_marginRight="@dimen/_15dp"
        android:background="#78909c"></View>

    <TextView
        android:id="@+id/skip_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="133dp"
        android:text="@string/skip"
        android:textColor="#00becc" />



</RelativeLayout>
